--- a/mern_react_projects/My-Portfolio--main/My-Portfolio--main/public/manifest.json
+++ b/mern_react_projects/My-Portfolio--main/My-Portfolio--main/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Sachin Mittal portfolio",
-  "name": "Sachin Mittal portfolio",
+  "short_name": "Omkar portfolio",
+  "name": "Omkar portfolio",
   "icons": [
     {
       "src": "favicon.ico",
